--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="img/forms.png" type="image/x-icon">  
-    <meta name="author" content="Pedro Henrique Santos da Silva">  
-    <title>Página de Contato</title>
+    <meta name="author" content="Pedro Henrique Santos da Silva">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="Contato, formulario, mensagem">
+    <title>Contato</title>
 </head>
 <body>
-    <form action="action">
-        <label for="name">Seu Nome</label><br><br>
-        <input type="text" id="nome" name="nome" required placeholder="Nome"><br><br>
-        <label for="textarea">Envie uma Mensagem</label><br><br>
-        <textarea name="textarea" id="msg" placeholder="..." required></textarea><br><br>
-        <button>Enviar</button>
-    </form>
+    <header>
+        <h1>Contato</h1>
+    </header>
+    <section class="contact-form">        
+        <h2>Envie-nos uma mensagem</h2>
+        <form action="" method="get">
+            <table>
+                <label for="nome">Nome:</label>
+                <input type="text" name="name" id="name" required>
+                
+                <label for="email">E-mail:</label>
+                <input type="email" name="email" id="email" required>
+
+                <label for="mensagem">Mensagem:</label>
+                <textarea name="mensagem" id="mensagem"></textarea>
+
+                <button type="submit">Enviar</button>
+            </table>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy;2024 Pedro. Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
